force-app/main/default/objects/Account/fields/AnotherNewPicklist__c.field-meta.xml
<CustomField>
    <fullName>AnotherNewPicklist__c</fullName>
    <label>AnotherNewPicklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Another</fullName>
            </value>
            <value>
                <fullName>And</fullName>
            </value>
            <value>
                <fullName>Yet Another</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>