force-app/main/default/objects/Account/fields/NewNewPickList__c.field-meta.xml
<CustomField>
    <fullName>NewNewPickList__c</fullName>
    <label>NewNewPickList</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First</fullName>
            </value>
            <value>
                <fullName>Second</fullName>
            </value>
            <value>
                <fullName>Third</fullName>
            </value>
            <value>
                <fullName>Fourth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>