force-app/main/default/objects/Account/fields/TestPickList__c.field-meta.xml
<CustomField>
    <fullName>TestPickList__c</fullName>
    <label>TestPickList</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>This</fullName>
            </value>
            <value>
                <fullName>Is</fullName>
            </value>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>Test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>